--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,9 @@ if (Boost_FOUND)
     message(STATUS "Boost_VERSION: ${Boost_VERSION}")
     include_directories(${Boost_INCLUDE_DIRS})
 endif ()
-add_executable(KryaLanguage main.cpp internal/krya/language/token/KryaToken.cpp internal/krya/language/token/KryaToken.h)
+add_executable(KryaLanguage main.cpp internal/krya/language/token/token.cpp internal/krya/language/token/token.h internal/krya/language/grammar/grammar.h internal/krya/language/grammar/operator/operator.h internal/krya/language/grammar/rvalue/rvalue.h internal/krya/language/grammar/lvalue/lvalue.h internal/krya/language/grammar/non_terminal/non_terminal.h internal/krya/language/grammar/lang/lang.cpp internal/krya/language/grammar/lang/lang.h internal/krya/language/grammar/data_type/data_type.cpp internal/krya/language/grammar/data_type/data_type.h internal/krya/language/grammar/var_declaration/var_declaration.h internal/krya/language/grammar/assignable/assignable.h internal/krya/language/grammar/expressions/expressions.h)
 if (Boost_FOUND)
     target_link_libraries(KryaLanguage ${Boost_LIBRARIES})
 endif ()
+message("DONE")
 
